# Envizion-Team031

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
Envizion/: db.sqlite3  manage.py
Envizion/Envizion/: asgi.py  settings.py  urls.py  wsgi.py
Envizion/Login/: urls.py  views.py
Envizion/Login/templates/login/: base.html  login.html
Envizion/blog/: models.py  urls.py  views.py
Envizion/blog/migrations/: 0001_initial.py
Envizion/blog/templates/blog/: home.html  personalBlog.html  publicBlog.html
Envizion/users/: forms.py  views.py
Envizion/users/templates/users/: base.html  home.html  login.html  personalBlog.html  register.html
Envizion/users/views/: base.html
calender/: cal_setup.py  create_event.py  delete_event.py  list_calendars.py  main.py  update_event.py
charts/: index.html
chores/: chores.py  main.py
src/Envizion/Envizion/: urls.py
