[tool.poetry]
name = "envizion-team031"
version = "0.1.0"
description = ""
authors = ["usercspa <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
google-api-python-client = "^2.2.0"
google-auth-oauthlib = "^0.4.4"
python-google-calendar-api = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
